--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -18,6 +18,7 @@
     border-bottom: 1px solid #3A3A3A;
     padding: 0.5rem 0.75rem;
     font-family: monospace;
+    margin: 0 !important;
   }
 
   li:first-of-type {
