--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -14,6 +14,10 @@
     overflow: auto;
   }
 
+  ul:has(> li) {
+    margin-top: 1rem !important;
+  }
+
   li {
     border-bottom: 1px solid #3A3A3A;
     padding: 0.5rem 0.75rem;
