--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -1,5 +1,6 @@
 .className {
   background: #000;
+  border-top: 1px solid var(--sl-color-gray-5);
   padding: 1rem;
   font-family: system-ui;
   font-size: 1rem;
