--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -3,3 +3,20 @@ iframe {
   height: 400px !important;
   border: 1px solid var(--sl-color-gray-5);
 }
+
+.ͼ1 .cm-content {
+  padding: 0;
+}
+
+.ͼ1 .cm-line {
+  padding: 0.1rem 1rem;
+  line-height: 1.75rem;
+}
+
+.ͼ1 .cm-line:first-of-type {
+  margin-top: 0.5rem;
+}
+
+.ͼ1 .cm-line:last-of-type {
+  margin-bottom: 0.5rem;
+}
