--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -4,6 +4,11 @@
   font-family: system-ui;
   font-size: 1rem;
 
+  .buttons {
+    display: inline-flex;
+    gap: 1rem;
+  }
+
   &.dark {
     background: #000;
     color: #fff;
