--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -9,6 +9,11 @@
     gap: 1rem;
   }
 
+  .htmlArea {
+    margin-top: 1rem;
+    display: none;
+  }
+
   &.dark {
     background: #000;
     color: #fff;
