--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -81,7 +81,7 @@
 
   ul {
     margin: 0 !important;
-    padding: 0  !important;
+    padding: 0 !important;
     list-style: none;
     white-space: pre-wrap;
     max-height: 400px;
@@ -93,13 +93,13 @@
   }
 
   li {
-    border-bottom: 1px solid #3A3A3A;
+    border-bottom: 1px solid #3a3a3a;
     padding: 0.5rem 0.75rem;
     font-family: monospace;
     margin: 0 !important;
   }
 
   li:first-of-type {
-    border-top: 1px solid #3A3A3A;
+    border-top: 1px solid #3a3a3a;
   }
 }
