--- a/src/components/CodeExecutor.module.css
+++ b/src/components/CodeExecutor.module.css
@@ -85,7 +85,7 @@
     list-style: none;
     white-space: pre-wrap;
     max-height: 400px;
-    overflow: auto;
+    overflow-y: auto;
   }
 
   ul:has(> li) {
