--- a/src/content/snippets/Device orientation events/sample.css
+++ b/src/content/snippets/Device orientation events/sample.css
@@ -1,3 +1,13 @@
 #request {
   display: none;
 }
+
+#container {
+  display: flex;
+  flex-direction: column;
+}
+
+label,
+input {
+  display: inline-block;
+}
